# Ventti_harjoitus

./: CMakeLists.txt  README.md
ventti_src/: Jakaja.cpp  Jakaja.h  Kortti.cpp  Kortti.h  Lista.cpp  Lista.h  Pakka.cpp  Pakka.h  Pelaaja.cpp  Pelaaja.h  Peli.cpp  Peli.h  Valikko.cpp  Valikko.h  Ventti.cpp  common_defs.h
